updated to first working version: mar1

--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 
 <html>
   <head>
-    <title></title>
+    <title>Of Rusty Nails and Wounded Hearts</title>
     <link href="style.css" rel="stylesheet" type="text/css" media="all" />
-    <script type="text/javascript">
-      function subscribe(){
-        alert('yo');
-      }
-    </script>
   </head>
   <body>
     <div id="container">
@@ -16,14 +11,18 @@
         <span>Of Rusty Nails and Wounded Hearts</span>
       </div>
       <div class="subscribe">
-        <span id="sub_text">Sign up for further updates.</span>
-        <input name="sub_email" value="Your email address"></input>
-        <a href="javascript:subscribe();"><div id="sub_button">
-          <span>Subscribe</span>
-        </div></a>
-      </div>
-      <div id="tagline">
-        <span>What will you see?</span>
+        <div id="sub_text">
+          <a class="fancy_button" href="http://eepurl.com/cLGuo">
+            <span style="background-color: #01458b;">subscribe</span>
+          </a>
+        </div>
+        
+        <a href="http://www.youtube.com/user/ofrustynails"><div id="youtube"></div></a>
+        <a href="http://twitter.com/ofrustynails"><div id="twitter"></div></a>
+        <a href="http://www.facebook.com/home.php?sk=group_136100679790598"><div id="facebook"></div></a>
+        <div id="tagline">
+          <span>What will you see?</span>
+        </div>
       </div>
       <div id="email_form">
       </div>
